force-app/main/default/objects/Liability__c/fields/Total_Wages_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Total_Wages_Assessed__c</fullName>
    <description>Pulls the total wages assessed from the parent assessment</description>
    <formula>If((RecordType.Name = 'BOFE' &amp;&amp; ISPICKVAL(Status__c, "Dismissed")),0, Assessment__r.Total_Wages_Assessed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Wages Assessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>