force-app/main/default/objects/Liability__c/fields/Type_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service__c</fullName>
    <inlineHelpText>Select how the service was rendered. This will be displayed on certain citation documents.</inlineHelpText>
    <label>Type of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Service</fullName>
            </value>
            <value>
                <fullName>Certified/Registered Mail</fullName>
            </value>
            <value>
                <fullName>Substitute Service</fullName>
            </value>
            <value>
                <fullName>E-mail Service with Prior Authorization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>