force-app/main/default/objects/Liability__c/fields/Unpaid_Judgment_Court_No__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Judgment_Court_No__c</fullName>
    <description>Unpaid Judgment(s) Superior Court County &amp; Case Number(s)</description>
    <label>Unpaid Judgment Court No</label>
    <type>TextArea</type>
</CustomField>