force-app/main/default/objects/Liability__c/fields/Wage_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Wage_Balance_Due__c</fullName>
    <description>Pulls the wages due down from the parent assessment</description>
    <formula>If((RecordType.Name = 'BOFE' &amp;&amp; ISPICKVAL(Status__c, "Dismissed")),0, Assessment__r.Total_Wages_Balance_Due__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wage Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>