force-app/main/default/objects/Liability__c/recordTypes/BOFE.recordType-meta.xml
<RecordType>
    <fullName>BOFE</fullName>
    <active>true</active>
    <description>Liabilities from BOFE Cases</description>
    <label>BOFE</label>
</RecordType>