force-app/main/default/objects/Liability__c/validationRules/Garment_Fund_Referral_Date_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Garment_Fund_Referral_Date_Req</fullName>
    <active>true</active>
    <description>Requires that the garment fund referral date be populated when the referral is checked</description>
    <errorConditionFormula>Garment_Fund_Referral__c 
&amp;&amp; ISBLANK ( Garment_Fund_Referral_Date__c )</errorConditionFormula>
    <errorMessage>Please Enter the Garment Fund Referral Date when referring.</errorMessage>
</ValidationRule>