force-app/main/default/objects/Liability__c/validationRules/Hearing_Officer_Affirm_Dismiss.validationRule-meta.xml
<ValidationRule>
    <fullName>Hearing_Officer_Affirm_Dismiss</fullName>
    <active>true</active>
    <description>Allows only a user with the "BOFE Hearing Officer perms" custom permission to set a liability to dismissed or affirmed.</description>
    <errorConditionFormula>($Profile.Name  = "BOFE User" )
&amp;&amp; 
(
  ISPICKVAL( Status__c , 'Affirmed' )
  ||
  ISPICKVAL( Status__c , 'Dismissed' )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Only a hearing officer may set a liability to "Affirmed" or "Dismissed"</errorMessage>
</ValidationRule>