force-app/main/default/objects/Liability__c/validationRules/JEU_Number_Required_on_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>JEU_Number_Required_on_Accepted</fullName>
    <active>true</active>
    <description>Requires that the JEU Number is required once the case is marked as Accepted.</description>
    <errorConditionFormula>if (isblank ( JEU_Number__c ) &amp;&amp; ISPICKVAL ( Refer_to_JEU__c , "Accepted"), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>JEU_Number__c</errorDisplayField>
    <errorMessage>You must populate the JEU# now that this has been accepted.</errorMessage>
</ValidationRule>