force-app/main/default/objects/Liability__c/listViews/Liabilities_Referred_to_JEU.listView-meta.xml
<ListView>
    <fullName>Liabilities_Referred_to_JEU</fullName>
    <columns>NAME</columns>
    <columns>Case_Employer__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Citation_Number__c</columns>
    <columns>Refer_to_JEU_Date__c</columns>
    <columns>Penalty_Balance_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Refer_to_JEU__c</field>
        <operation>equals</operation>
        <value>Referred</value>
    </filters>
    <filters>
        <field>JEU_Number__c</field>
        <operation>equals</operation>
    </filters>
    <label>Liabilities Referred to JEU for Review</label>
</ListView>