force-app/main/default/objects/Liability__c/listViews/Liabilities_Referred_to_JEU_for_JEU_User.listView-meta.xml
<ListView>
    <fullName>Liabilities_Referred_to_JEU_for_JEU_User</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Case_Employer__c</columns>
    <columns>Citation_Number__c</columns>
    <columns>Refer_to_JEU_Date__c</columns>
    <columns>Refer_to_JEU__c</columns>
    <columns>JEU_Number__c</columns>
    <columns>Assigned_Deputy_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Refer_to_JEU__c</field>
        <operation>equals</operation>
        <value>Referred,Pending-JEU</value>
    </filters>
    <label>Liabilities Referred to JEU for JEU User</label>
    <sharedTo>
        <group>JEU</group>
    </sharedTo>
</ListView>