force-app/main/default/objects/Liability__c/listViews/My_Liabilities.listView-meta.xml
<ListView>
    <fullName>My_Liabilities</fullName>
    <columns>Case_Number__c</columns>
    <columns>Case_Employer__c</columns>
    <columns>NAME</columns>
    <columns>Citation_Number__c</columns>
    <columns>Manual_Citation_Number__c</columns>
    <columns>Refer_to_JEU__c</columns>
    <columns>Refer_to_JEU_Date__c</columns>
    <columns>JEU_Number__c</columns>
    <columns>JEU_Reject_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HIDDEN_Field_For_Liability_Search__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Refer_to_JEU__c</field>
        <operation>equals</operation>
        <value>Referred,Rejected,Accepted</value>
    </filters>
    <label>My Liabilities</label>
    <sharedTo>
        <role>BOFE</role>
        <role>BOFE_Deputy_ANA</role>
        <role>BOFE_Deputy_BAK</role>
        <role>BOFE_Deputy_ELC</role>
        <role>BOFE_Deputy_FRE</role>
        <role>BOFE_Deputy_LAO</role>
        <role>BOFE_Deputy_LBO</role>
        <role>BOFE_Deputy_OAK</role>
        <role>BOFE_Deputy_RDG</role>
        <role>BOFE_Deputy_RIV</role>
        <role>BOFE_Deputy_SAC</role>
        <role>BOFE_Deputy_SAL</role>
        <role>BOFE_Deputy_SBA</role>
        <role>BOFE_Deputy_SDO</role>
        <role>BOFE_Deputy_SFO</role>
        <role>BOFE_Deputy_SJO</role>
        <role>BOFE_Deputy_SRO</role>
        <role>BOFE_Deputy_STK</role>
        <role>BOFE_Deputy_VNO</role>
        <role>BOFE_Sr_Deputy_North_1</role>
        <role>BOFE_Sr_Deputy_North_2</role>
        <role>BOFE_Sr_Deputy_North_3</role>
        <role>BOFE_Sr_Deputy_North_4</role>
        <role>BOFE_Sr_Deputy_South_1</role>
        <role>BOFE_Sr_Deputy_South_2</role>
        <role>BOFE_Sr_Deputy_South_3</role>
        <role>BOFE_Sr_Deputy_South_4</role>
    </sharedTo>
</ListView>